--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Simple Pro
+Theme Name: Simple Pro v2
 Theme URI: https://miosito.com
 Author: Alessia Raimondi
 Author URI: https://miosito.com
@@ -50,16 +50,15 @@ h6 { font-size: 15px; line-height: 1.3; font-weight: 800; }
 }
 
 a { text-decoration: none; color: #f75e47 }
-p {line-height: 1.3; }
+p {line-height: 1.5; }
+
+.single p {font-size: 18px; line-height: 1.8}
 
 
 /* ! Layout
 -----------------------------------------------------------------------------*/
-.header,
-.footer { border: 1px solid red; margin: 10px; padding: 10px; }
-
 .container,
-.article { border: 1px solid blue; margin: 10px; padding: 10px; }
+.article { margin: 10px; padding: 10px; }
 
 .container { max-width: 800px; margin: 0 auto; }
 .page .container { max-width: 1200px; }
@@ -67,11 +66,12 @@ p {line-height: 1.3; }
 
 /* ! Header
 -----------------------------------------------------------------------------*/
-.header { display: flex; justify-content: space-between; }
-.logo { border: 1px solid red; display: inline-block; color: #000; font-weight: 800; font-size: 30px; text-transform: uppercase; }
+.header { display: flex; justify-content: space-between; background: #fff; padding: 20px; border-radius: 10px; margin: 10px; box-shadow: 0 5px 20px rgba(0,0,0,0.2);}
+.logo { display: inline-block; color: #000; font-weight: 800; font-size: 30px; text-transform: uppercase; }
 .menu ul { margin-bottom: 0; }
 .menu li { display: inline-block; }
-.menu li a { padding: 10px; display: block; }
+.menu li a { padding: 10px; display: block; color: #000; }
+.menu li.evi a { background: #f75e47; color: #fff; text-transform: uppercase; font-weight: bold; border-radius: 4px; padding: 10px 20px; }
 
 @media (max-width: 768px) {
   .header { display: block; }
@@ -83,14 +83,25 @@ p {line-height: 1.3; }
 
 /* ! Hero
 -----------------------------------------------------------------------------*/
-.hero { border: 1px solid red; padding: 20px; margin: 10px; text-align: center; }
+.hero { padding: 20px; text-align: center; }
 .hero h1 { padding: 100px 10px; }
 
-.single .hero { display: none; }
+.page .hero h1 { padding: 150px 10px; }
 
 
+/* ! Blocks
+-----------------------------------------------------------------------------*/
+.panel-info { margin-top: 100px; }
 
+.panel-info .wp-block-media-text__media { background-color: #dcf6e2; padding: 30px; border-radius: 10px; margin-bottom: 60px; }
+.panel-info .wp-block-media-text__media img {margin-bottom: -60px; border-radius: 10px; }
 
+.post-img {background-color: #dcf6e2; padding: 30px; border-radius: 10px; margin-bottom: 60px; }
+.post-img img {margin-bottom: -60px; border-radius: 10px; }
+
+/* ! Footer
+-----------------------------------------------------------------------------*/
+.footer { background: #eee; padding: 30px; text-align: center;}
 
 
 
