Fix theme name in style.css

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Simple Pro v2
+Theme Name: Simple Pro
 Theme URI: https://miosito.com
 Author: Alessia Raimondi
 Author URI: https://miosito.com
