--- a/style.css
+++ b/style.css
@@ -82,7 +82,8 @@ p {line-height: 1.3; }
 .hero { padding: 20px; text-align: center; }
 .hero h1 { padding: 100px 10px; }
 
-.single .hero { display: none; } /* nasconde la hero nella single page */
+/*.single .hero { display: none; } *//* nasconde la hero nella single page */
+.page .hero h1 { padding: 150px 10px; }
 
 
 /* ! Blocks
